tests/tests/macro/compile_error.stderr
error: specta: You must apply the #[specta] macro before the #[wasm_bindgen] macro
   --> tests/macro/compile_error.rs:108:1
    |
108 | #[wasm_bindgen]
    | ^^^^^^^^^^^^^^^
    |
    = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0255]: the name `__specta__fn__testing` is defined multiple times
   --> tests/macro/compile_error.rs:110:8
    |
109 | #[specta]
    | --------- previous definition of the macro `__specta__fn__testing` here
110 | pub fn testing() {}
    |        ^^^^^^^ `__specta__fn__testing` reimported here
    |
    = note: `__specta__fn__testing` must be defined only once in the macro namespace of this module

error: expected `fn`
  --> tests/macro/compile_error.rs:76:1
   |
76 | struct InvalidAttrs1;
   | ^^^^^^

error: expected `fn`
  --> tests/macro/compile_error.rs:80:1
   |
80 | struct InvalidAttrs2;
   | ^^^^^^

error: expected non-macro attribute, found attribute macro `specta`
  --> tests/macro/compile_error.rs:84:7
   |
84 |     #[specta(noshot = true)]
   |       ^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `specta`
  --> tests/macro/compile_error.rs:90:7
   |
90 |     #[specta(noshot)]
   |       ^^^^^^ not a non-macro attribute

error: expected `fn`
  --> tests/macro/compile_error.rs:96:5
   |
96 | pub enum TransparentEnum {}
   |     ^^^^

error: expected `fn`
   --> tests/macro/compile_error.rs:100:5
    |
100 | pub struct InvalidSpectaAttribute1;
    |     ^^^^^^

error: key-value macro attributes are not supported
   --> tests/macro/compile_error.rs:103:1
    |
103 | #[specta = "todo"]
    | ^^^^^^^^^^^^^^^^^^

error: expected `fn`
   --> tests/macro/compile_error.rs:104:5
    |
104 | pub struct InvalidSpectaAttribute2;
    |     ^^^^^^

error: cannot find derive macro `Type` in this scope
 --> tests/macro/compile_error.rs:6:10
  |
6 | #[derive(Type)]
  |          ^^^^
  |
note: `Type` is imported here, but it is only a trait, without a derive macro
 --> tests/macro/compile_error.rs:3:22
  |
3 | use specta::{specta, Type};
  |                      ^^^^

error: cannot find attribute `serde` in this scope
 --> tests/macro/compile_error.rs:7:3
  |
7 | #[serde(rename_all = "camelCase123")]
  |   ^^^^^
  |
  = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:11:10
   |
11 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:19:10
   |
19 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:24:10
   |
24 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:29:10
   |
29 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find attribute `serde` in this scope
  --> tests/macro/compile_error.rs:31:7
   |
31 |     #[serde(flatten)]
   |       ^^^^^
   |
   = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find attribute `serde` in this scope
  --> tests/macro/compile_error.rs:33:7
   |
33 |     #[serde(flatten)]
   |       ^^^^^
   |
   = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:37:10
   |
37 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find attribute `serde` in this scope
  --> tests/macro/compile_error.rs:38:3
   |
38 | #[serde(untagged)]
   |   ^^^^^
   |
   = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:43:10
   |
43 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find attribute `serde` in this scope
  --> tests/macro/compile_error.rs:44:3
   |
44 | #[serde(untagged)]
   |   ^^^^^
   |
   = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:49:10
   |
49 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find attribute `serde` in this scope
  --> tests/macro/compile_error.rs:51:7
   |
51 |     #[serde(flatten)]
   |       ^^^^^
   |
   = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find attribute `serde` in this scope
  --> tests/macro/compile_error.rs:53:7
   |
53 |     #[serde(flatten)]
   |       ^^^^^
   |
   = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:59:10
   |
59 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find attribute `serde` in this scope
  --> tests/macro/compile_error.rs:60:3
   |
60 | #[serde(tag = "tag")]
   |   ^^^^^
   |
   = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:67:10
   |
67 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find attribute `serde` in this scope
  --> tests/macro/compile_error.rs:69:7
   |
69 |     #[serde(flatten)]
   |       ^^^^^
   |
   = note: `serde` is in scope, but it is a crate, not an attribute

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:74:10
   |
74 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:78:10
   |
78 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:82:10
   |
82 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:88:10
   |
88 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:94:10
   |
94 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find derive macro `Type` in this scope
  --> tests/macro/compile_error.rs:98:10
   |
98 | #[derive(Type)]
   |          ^^^^
   |
note: `Type` is imported here, but it is only a trait, without a derive macro
  --> tests/macro/compile_error.rs:3:22
   |
3  | use specta::{specta, Type};
   |                      ^^^^

error: cannot find derive macro `Type` in this scope
   --> tests/macro/compile_error.rs:102:10
    |
102 | #[derive(Type)]
    |          ^^^^
    |
note: `Type` is imported here, but it is only a trait, without a derive macro
   --> tests/macro/compile_error.rs:3:22
    |
3   | use specta::{specta, Type};
    |                      ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
   --> tests/macro/compile_error.rs:110:20
    |
110 | pub fn testing() {}
    |                    ^ consider adding a `main` function to `$DIR/tests/macro/compile_error.rs`
